--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 </header>
 <section>
     <h1>Les vidéos à ne pas manquer</h1>
+    <div class="art1">
+        <div class="contenu">
+            <h6>RECENT</h6>
+            <h1><b>À Glasgow, des sirènes s'échouent dans des filets contre la Cop26</b></h1>
+            <a href="#">le HuffPost</a><p>Ajoutée il y a 7heures</p>
+        </div>
+    </div>
 </section>
 
 
