--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         </div>
     </div>
 </header>
+<aside>
+
+</aside>
 <section>
     <h1>Les vidéos à ne pas manquer</h1>
     <div class="art1">
@@ -44,6 +47,14 @@
             <a href="#">le HuffPost</a><p>Ajoutée il y a 7heures</p>
         </div>
     </div>
+    <div class="art2">
+        <div class="contenu2">
+            <h6>RECENT</h6>
+            <h1><b>Au moins trois morts dans un mariage en Afghanistan</b></h1>
+            <a href="#">euronews (en français)</a><p>Ajoutée il y a 7heures</p>
+        </div>
+    </div>
+
 </section>
 
 
