--- a/index.html
+++ b/index.html
@@ -36,7 +36,26 @@
     </div>
 </header>
 <aside>
+    <p>PLUS DE</p>
+    <h1>Vidéos à la une</h1>
+    <div class="aside-contenu">
+        <div class="video">
+            <h4>Faut-il ramasser les feuilles mortes ?</h4>
+            <a href="#">Brut</a>
+            <p>Ajoutée il y a 7heures</p>
+        </div>
+        <div class="video2">
+            <h4>Le roi Philippe et la reine Mathilde de Belgique cette...</h4>
+            <a href="#">Waka Waka News</a>
+            <p>Ajoutée il y a 7heures</p>
+        </div>
+        <div class="video3">
+            <h4>Su Min, la grand-mère en road trip qui inspire les...</h4>
+            <a href="#">Courrier international</a>
+            <p>Ajoutée il y a 7heures</p>
+        </div>
 
+    </div>
 </aside>
 <section>
     <h1>Les vidéos à ne pas manquer</h1>
