--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </div>
 </aside>
 <section>
-    <h1>Les vidéos à ne pas manquer</h1>
+    <h1>À la une</h1>
+    <h2>Les vidéos à ne pas manquer</h2>
     <div class="art1">
         <div class="contenu">
             <h6>RECENT</h6>
